# TripVault-VirtualPool-Storage

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py  auth.py  files.py  health.py  trips.py  users.py
backend/app/core/: config.py  database.py  logging.py
backend/app/models/: __init__.py  file_chunk.py  trip.py  trip_member.py  user.py  user_cloud_account.py  virtual_file.py
backend/app/schemas/: file_upload.py  trip.py  trip_invite.py  trip_member.py  user.py
backend/app/services/: google_drive_service.py  storage_service.py
